--- a/achievements.html
+++ b/achievements.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MUSIC Website</title>
-    <link rel="stylesheet" href="Style.css" type="text/css">
+    <title>Activities</title>
+    <link rel="stylesheet" href="StyleAch.css" type="text/css">
+
+
 </head>
 <body>
-    
+
     <div class="banner">
         <div class="navbar">
             <img src="Logo.png" class="Logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="activities.html">Activities</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="#">Achievements</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </div>
         <div class="container">
-            <p> This is the Home Page</p>
+            <p> This is the Achievements Page</p>
         </div>
     </div>
 
