--- a/activities.html
+++ b/activities.html
@@ -5,26 +5,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activities</title>
-    <link rel="stylesheet" href="StyleAct.css" type="text/css">
-
+    <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 <body>
 
-    <div class="banner">
-        <div class="navbar">
-            <img src="Logo.png" class="Logo">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Activities</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
+    <!-- Navbar -->
+
+    <header class="text-gray-400 bg-gray-900 body-font">
+        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+              <img src="Logo.png" class="Logo">
+            <span class="ml-3 text-xl" font-size="20">SRI PURANDARADASA <BR/> <span class="ml-3a text-xl" font-size="15">CARNATIC SANGEETA <BR/></span>
+            <span class="ml-3b text-xl" font-size="15">VISHVA GURUKUL <BR/> 
+            </span>
+             
+          </a>
+          <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center" border="0">
+            <a class="mr-5 hover:text-white" href="index.html">Home</a>
+            <a class="mr-5 hover:text-white" href="#">Activities</a>
+            <a class="mr-5 hover:text-white" href="achievements.html">Achievements</a>
+            <a class="mr-5 hover:text-white" href="contact.html">Contact</a>
+          </nav>
         </div>
-        <div class="container">
-            <p> This is the Activities Page</p>
+      </header>
+ 
+<!--Content-->      
+<section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
+    <div class="container px-5 py-24 mx-auto">
+        <div class="-my-8 divide-y-2 divide-gray-800">
+            <div class="py-8 flex flex-wrap md:flex-nowrap">
+                <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+                    <span class="font-semibold title-font text-white">Activities and Programs</span>
+                </div>
+                <div class="md:flex-grow">
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">1.) Teaching Carnatic Music.</h2><br>
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">2.) Conduct online examinations and give certificates.</h2><br>
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">3.) Music Therapy for individuals with special needs.</h2><br>
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">4.) Music Therapy exercises will be taught, by using different forms of Carnatic Music.</h2><br>
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">5.) Life histories and contributions of all composers of Carnatic Music will be highlighted through stories.
+                    </h2><br>
+                </div>
+            </div>
+            <div class="py-8 flex border-t-2 border-gray-800 flex-wrap md:flex-nowrap">
+                <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+                    <span class="font-semibold title-font text-white">Raga Therapy and <br> Rhythm Therapy</span>
+                </div>
+                <div class="md:flex-grow">
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">1.) Promotion of Raga Therapy by using Ragas or Tunes by listening, singing, or playing instruments.</h2><br>
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">2.) Rhythm therapy modules for children with special needs.</h2><br>
+                    <h2 class="text-2xl font-medium text-white title-font mb-2">3.) Listening to rhythm instruments playing for peace, meditation, stimulation of joy, and positive energy.</h2><br>
+                </div>
+            </div>      
         </div>
     </div>
+</section>
+
+<!--Footer-->
+<footer class="text-gray-400 bg-gray-900 body-font">
+    <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+      <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+        <span class="ml-3 text-xl">spcsvgurukula</span>
+      </a>
+      <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2022 spcsvgurukula</p>
+      <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+        <a class="text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <circle cx="4" cy="4" r="2" stroke="none"></circle>
+          </svg>
+        </a>
+      </span>
+    </div>
+  </footer>
+
 
 </body>
 </html>
