--- a/index.html
+++ b/index.html
@@ -4,25 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MUSIC Website</title>
+    <title>Home</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="Style.css" type="text/css">
+
 </head>
 <body>
-    
-    <div class="banner">
-        <div class="navbar">
-            <img src="Logo.png" class="Logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
+
+    <!-- Navbar -->
+
+<header class="text-gray-400 bg-gray-900 body-font">
+  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+    <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+        <img src="Logo.png" class="Logo">
+      <span class="ml-3 text-xl" font-size="20">SRI PURANDARADASA <BR/> <span class="ml-3a text-xl" font-size="15">CARNATIC SANGEETA <BR/></span>
+      <span class="ml-3b text-xl" font-size="15">VISHVA GURUKUL <BR/> 
+      </span>
+       
+    </a>
+    <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center" border="0">
+      <a class="mr-5 hover:text-white" href="#">Home</a>
+      <a class="mr-5 hover:text-white" href="activities.html">Activities</a>
+      <a class="mr-5 hover:text-white" href="achievements.html">Achievements</a>
+      <a class="mr-5 hover:text-white" href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<!-- Main Page -->
+<section class="text-gray-400 bg-gray-900 body-font">
+    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
+        <img class="Hero" alt="hero" src="background.jpeg">
+      </div>
+      <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Shri. Purandaradasa Varsity of Carnatic Music</h1>
+        <p class="mb-8 leading-relaxed">Divine Music for Healing Body, Mind, and Spirit.</p>
+        <div class="flex justify-center">
+     <!--     <button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Button</button>
+          <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Button</button> -->
         </div>
-        <div class="container">
-            <p> This is the Home Page</p>
+      </div>
+    </div>
+  </section>
+
+<!--intro-->
+<section class="text-gray-400 bg-gray-900 body-font">
+    <div class="container px-5 py-24 mx-auto">
+      <div class="flex flex-wrap -mx-4 -mb-10 text-center">
+        <div class="sm:w-1/2 mb-10 px-4">
+          <div class="rounded-lg h-100 overflow-hidden">
+            <img alt="content" class="object-cover object-center h-full w-full" src="guy1.png">
+          </div>
+          <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">Layayogi. Karnataka kalashri N G Ravi</h2>
+        </div>
+        <div class="sm:w-1/2 mb-10 px-4">
+          <div class="rounded-lg h-100 overflow-hidden">
+            <img alt="content" class="object-cover object-center h-full w-full" src="girl.png">
+          </div>
+          <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">Nadayogini Dr. Meenakshiravi</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="text-gray-400 bg-gray-900 body-font">
+    <div class="container px-5 py-24 mx-auto">
+      <div class="flex flex-wrap -mx-4 -mb-10 text-center">
+        <div class="sm:w-1/2 mb-10 px-4">
+          <div class="rounded-lg h-100 overflow-hidden"></div>
+          <h4 class="title-font text-2xl text-white mt-6 mb-3">Our Objectives:<br> 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;1.) To explore, and disseminate the essence of Carnatic Music from a health dimension.<br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;2.) Promotion of bhajans and Slokas to one and all for holistic health purposes.<br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;3.) Musical discourses and thematic concerts to create &emsp; &emsp;&emsp;&emsp;&emsp;&emsp; and enhance the awareness about the depth and diversity of Carnatic Music
+        </h4>
         </div>
     </div>
+</div>
+</section>
+
+<!-- Footer -->
+<footer class="text-gray-400 bg-gray-900 body-font">
+    <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+      <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+        <span class="ml-3 text-xl">spcsvgurukula</span>
+      </a>
+      <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2022 spcsvgurukula</p>
+      <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+        <a class="text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <circle cx="4" cy="4" r="2" stroke="none"></circle>
+          </svg>
+        </a>
+      </span>
+    </div>
+  </footer>
+
 
 </body>
 </html>
